--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.hearthappy.desktopView'
 def roomVersion = "2.2.5"
 
 android {
@@ -49,4 +51,29 @@ dependencies {
 
     implementation "com.facebook.stetho:stetho:1.4.2"
 
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.sourceFiles
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.sourceFiles
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+/*task classesJar(type: Jar) {
+    from "$buildDir/intermediates/classes/release"
+}*/
+
+artifacts {
+//    archives classesJar
+    archives javadocJar
+    archives sourcesJar
 }
