--- a/desktoplist/build.gradle
+++ b/desktoplist/build.gradle
@@ -59,7 +59,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
 
-    implementation "com.facebook.stetho:stetho:1.4.2"
+//    implementation "com.facebook.stetho:stetho:1.4.2"
+    implementation 'com.hi-dhl:binding:1.0.7'
 }
 
 task sourcesJar(type: Jar) {
