--- a/desktoplist/build.gradle
+++ b/desktoplist/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 //    implementation "com.facebook.stetho:stetho:1.4.2"
     implementation 'com.hi-dhl:binding:1.0.7'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 
 
 }
