--- a/desktoplist/build.gradle
+++ b/desktoplist/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-//    id 'com.github.dcendents.android-maven'
+    id 'com.github.dcendents.android-maven'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id 'maven-publish'
 }
+group = 'com.hearthappy.desktopView'
 
 def roomVersion = "2.2.6"
 
@@ -38,6 +38,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets.main {
+        java.srcDirs += 'src/main/java'
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -52,7 +56,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -72,28 +76,26 @@ dependencies {
 
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                // Applies the component for the release build variant.
-                from components.release
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.sourceFiles
+}
 
-                // You can then customize attributes of the publication as shown below.
-                groupId = 'com.hearthappy.desktopView'
-                artifactId = 'desktopView'
-                version = '1.0'
-            }
-            // Creates a Maven publication called “debug”.
-            debug(MavenPublication) {
-                // Applies the component for the debug build variant.
-                from components.debug
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.sourceFiles
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
 
-                groupId = 'com.hearthappy.desktopView'
-                artifactId = 'desktopView-debug'
-                version = '1.0'
-            }
-        }
-    }
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+/*task classesJar(type: Jar) {
+    from "$buildDir/intermediates/classes/release"
+}*/
+
+artifacts {
+//    archives classesJar
+    archives javadocJar
+    archives sourcesJar
 }
