1、初始化数据库库版本 2、删除库中使用的viewBinging

--- a/desktoplist/build.gradle
+++ b/desktoplist/build.gradle
@@ -89,9 +89,9 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
-/*task classesJar(type: Jar) {
+task classesJar(type: Jar) {
     from "$buildDir/intermediates/classes/release"
-}*/
+}
 
 artifacts {
 //    archives classesJar
